# generic-connection-pool

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.yaml  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
docs/source/: conf.py  index.rst
docs/source/pages/: api.rst  changelog.rst  contribute.rst  installation.rst  quickstart.rst
examples/: async_pg_pool.py  async_pool.py  connection_manager.py  custom_manager.py  db.py  manager_hooks.py  pg_pool.py  quickstart.py  ssl_pool.py  tcp_pool.py
generic_connection_pool/: __init__.py  asyncio.py  common.py  exceptions.py  heap.py  rankmap.py  threding.py
generic_connection_pool/asyncio/: __init__.py  locks.py  pool.py  utils.py
generic_connection_pool/contrib/: asyncpg.py  psycopg2.py  socket.py  socket_async.py  unix.py  unix_async.py
generic_connection_pool/threading/: __init__.py  locks.py  pool.py
static/: connection-pool.drawio
tests/: conftest.py  test_async_locks.py  test_async_pool.py  test_heap.py  test_rankmap.py  test_sync_locks.py  test_sync_pool.py
tests/contrib/: test_async_socket_manager.py  test_socket_manager.py  test_unix.py  test_unix_async.py
tests/resources/: ssl.cert  ssl.key
