[tool.poetry]
name = "generic-connection-pool"
version = "0.4.0"
description = "generic connection pool"
authors = ["Dmitry Pershin <dapper1291@gmail.com>"]
license = "Unlicense"
readme = "README.rst"
homepage = "https://github.com/dapper91/generic-connection-pool"
repository = "https://github.com/dapper91/generic-connection-pool"
documentation = "https://generic-connection-pool.readthedocs.io"
keywords = ['pool', 'connection-pool', 'asyncio', 'socket', 'tcp']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: Public Domain",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9"
psycopg2 = {version = ">=2.9.5", optional = true}

furo = {version = "^2023.7.26", optional = true}
Sphinx = {version = "^6.2.1", optional = true}
sphinx_design = {version = "^0.5.0", optional = true}
toml = {version = "^0.10.2", optional = true}
sphinx-copybutton = {version = "^0.5.2", optional = true}

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
docs = ['Sphinx', 'sphinx_design', 'sphinx-copybutton', 'furo', 'toml']

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
types-psycopg2 = "^2.9.21"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
allow_redefinition = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
